@@ -173,6 +173,7 @@ class IndexForm extends EntityForm {
 
     $form['datasource_configs'] = [
       '#type' => 'container',
+      '#optional' => TRUE,
       '#attributes' => [
         'id' => 'search-api-datasources-config-form',
       ],
@@ -219,6 +220,7 @@ class IndexForm extends EntityForm {
 
     $form['tracker_config'] = [
       '#type' => 'container',
+      '#optional' => TRUE,
       '#attributes' => [
         'id' => 'search-api-tracker-config-form',
       ],
