@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2903407 by drunken monkey, alan-ps: Added #optional to form containers where
+  appropriate.
 
 Search API 1.4 (2017-09-07):
 ----------------------------
